# langchain-app

./: pyproject.toml
dados/: analise_orcamento.csv
langchain_app/: tools.py
notebooks/: aula01.ipynb  mod-05-aula1-prompts.ipynb  mod-05-aula3-chains.ipynb  mod-05-aula4-data_loaders.ipynb  mod-05-aula5-summarization.ipynb  mod-05-aula6-agents.ipynb
notebooks/faiss_index/: index.faiss  index.pkl
